--- a/PowerVoting/app/src/main/res/layout/activity_main.xml
+++ b/PowerVoting/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,22 @@
     tools:context="com.powervoting.powervoting.MainActivity">
 
     <TextView
+        android:id="@+id/todays_submissions_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerHorizontal="true"
+        android:text="Today's Submissions" />
+
+    <ListView
+        android:id="@+id/submissions_lv"
+        android:layout_below="@id/todays_submissions_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
